<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.phuctruong.ezc.View.SettingActivity"    >

    <include
        android:id="@+id/appbar_setting"
        layout="@layout/appbar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundLight"
        android:layout_below="@id/appbar_setting">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/pad_10dp">

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/pad_1dp"
                android:layout_marginBottom="@dimen/pad_10dp"
                android:layout_marginTop="@dimen/pad_3dp"
                android:background="@color/side_menu_divider" />

            <TextView
                android:id="@+id/lbl1"
                style="@style/lbl_setting2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account" />

            <TextView
                style="@style/lbl_setting1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Anna Mccoy"
                android:textSize="@dimen/txt_12sp"
                android:textStyle="normal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider"
                android:layout_marginBottom="@dimen/pad_10dp"
                android:layout_marginTop="@dimen/pad_10dp"
                android:background="@color/side_menu_divider" />

            <TextView
                android:id="@+id/lbl2"
                style="@style/lbl_setting2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acc_pos" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider"
                android:layout_marginBottom="@dimen/pad_10dp"
                android:layout_marginTop="@dimen/pad_10dp"
                android:background="@color/side_menu_divider" />

            <Switch
                style="@style/switch_custom"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:checked="true"
                android:text="@string/push_notif" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider"
                android:layout_marginBottom="@dimen/pad_10dp"
                android:layout_marginTop="@dimen/pad_10dp"
                android:background="@color/side_menu_divider" />

            <Switch
                android:id="@+id/switch1"
                style="@style/switch_custom"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:text="@string/email_notif" />

            <TextView
                style="@style/lbl_setting1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/pad_20dp"
                android:text="@string/help" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/pad_1dp"
                android:layout_marginBottom="@dimen/pad_10dp"
                android:layout_marginTop="@dimen/pad_3dp"
                android:background="@color/side_menu_divider" />

            <TextView
                android:id="@+id/lbl3"
                style="@style/lbl_setting2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help1" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider"
                android:layout_marginBottom="@dimen/pad_10dp"
                android:layout_marginTop="@dimen/pad_10dp"
                android:background="@color/side_menu_divider" />

            <TextView
                android:id="@+id/lbl4"
                style="@style/lbl_setting2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/faq" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider"
                android:layout_marginBottom="@dimen/pad_10dp"
                android:layout_marginTop="@dimen/pad_10dp"
                android:background="@color/side_menu_divider" />

            <TextView
                android:id="@+id/lbl5"
                style="@style/lbl_setting2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tnc" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider"
                android:layout_marginBottom="@dimen/pad_10dp"
                android:layout_marginTop="@dimen/pad_10dp"
                android:background="@color/side_menu_divider" />

        </LinearLayout>

    </ScrollView>


</RelativeLayout>